syntax = "proto2";
package scheduler;
import "protocols/jobsrv.proto";

enum ProjectState {
  NotStarted = 0;
  InProgress = 1;
  Success = 2;
  Failure = 3;
  Skipped = 4;
}

message Project {
  optional string name = 1;
  optional string ident = 2;
  optional ProjectState state = 3;
  optional uint64 job_id = 4;
  optional string target = 5;
}

enum GroupState {
  Pending = 0;
  Dispatching = 1;
  Complete = 2;
  Failed = 3;
}

message GroupCreate {
  optional string origin = 1;
  optional string package = 2;
  optional bool deps_only = 3;
  optional string target = 4;
  optional bool origin_only = 5;
  optional bool package_only = 6;
}

message GroupGet {
  optional uint64 group_id = 1;
}

message Group {
  optional uint64 id = 1;
  optional GroupState state = 2;
  repeated Project projects = 3;
  optional string created_at = 4;
}

message Package {
  optional string ident = 1;
  repeated string deps = 2;
  optional string target = 3;
}

message PackagePreCreate {
  optional string ident = 1;
  repeated string deps = 2;
  optional string target = 3;
}

message PackageCreate {
  optional string ident = 1;
  repeated string deps = 2;
  optional string target = 3;
}

message ReverseDependenciesGet {
  optional string origin = 1;
  optional string name = 2;
  optional string target = 3;
}

message ReverseDependencies {
  optional string origin = 1;
  optional string name = 2;
  repeated string rdeps = 3;
}

message PackageStatsGet {
  optional string origin = 1;
}

message PackageStats {
  optional uint64 plans = 1;
  optional uint64 builds = 2;
  optional uint64 unique_packages = 3;
}

message JobStatus {
  optional jobsrv.Job job = 1;
}
